app/assets/stylesheets/articulator.css.scss
// Place all the styles related to the articulator controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.hero-unit {
  background: #fff image_url('chimp_face.jpg') no-repeat bottom right;
  border: 1px solid #e5e5e5;
}

#articles th:last-child { text-align: right; }
#articles td:last-child { text-align: right; }
.controls { margin: 18px; }

#article-iframe {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  height: 800px;
  right: 0;
  border: 0;
  z-index: -1;
}

#article-form {
  background: rgba(255,255,255,0.4);
  padding: 18px;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 100;
}

#article-form:hover {
  background: rgba(255,255,255,1);
}

.headline {
  text-decoration: underline;
  color: #0033ff;
}

.headline a {
  text-decoration: underline;
  color: #0033ff;
}

.author {
  color: #ff3333;
}

.pub {
  color: #ff3333;
}

.tag {
  font-weight: bold;
  color: #C00;
}

.mention {
  color: #ff3333;
}

